[package]
name = "warp-test"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.0"
warp = "0.2.0"
pretty_env_logger = "0.3.0"
log = "0.4.7"
tokio = { version = "0.2.0", features = ["macros", "time"] }

